--- a/src/XelsXLCDesktopWalletApp/Views/Pages/Cross-chain Transfer/CrossChainTransferPage.xaml
+++ b/src/XelsXLCDesktopWalletApp/Views/Pages/Cross-chain Transfer/CrossChainTransferPage.xaml
@@ -7,143 +7,141 @@
       mc:Ignorable="d" 
        d:DesignHeight="400" d:DesignWidth="525"
       Title="Cross-Chain Transfer">
-    <StackPanel x:Name="Cross_Chain" Background="White" >
+    <Grid x:Name="Cross_Chain_Trans">
+        <StackPanel x:Name="Cross_Chain" Background="White" >
+            <Grid Margin="100 25">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
 
+                <Border Grid.Row="0" Background="Green" CornerRadius="8"  Height="30">
+                    <Label Content="Cross chain Transfer" FontSize="20" HorizontalAlignment="Center"  Foreground="White" Padding=" 0 0 0 3"  />
+                </Border>
 
-        <Grid Margin="100 25">
-            <Grid.RowDefinitions>
+                <!-- input form  -->
+                <Border Grid.Row="01" Margin="0 15 0 0 ">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*" />
+                            <RowDefinition Height="*"/>
+                            <RowDefinition Height="*"/>
+                            <RowDefinition Height="*"/>
+                        </Grid.RowDefinitions>
 
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
-            </Grid.RowDefinitions>
+                        <Border Grid.Row="0">
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="*"/>
+                                    <RowDefinition Height="*"/>
 
-            <Border Grid.Row="0" Background="Green" CornerRadius="8"  Height="30">
-                <Label Content="Cross chain Transfer" FontSize="20" HorizontalAlignment="Center"  Foreground="White" Padding=" 0 0 0 3"  />
-            </Border>
+                                </Grid.RowDefinitions>
 
-            <!-- input form  -->
-            <Border Grid.Row="01" Margin="0 15 0 0 ">
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="*" />
-                        <RowDefinition Height="*"/>
-                        <RowDefinition Height="*"/>
-                        <RowDefinition Height="*"/>
-                    </Grid.RowDefinitions>
-
-                    <Border Grid.Row="0">
-                        <Grid>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="*"/>
-                                <RowDefinition Height="*"/>
-                                
-                            </Grid.RowDefinitions>
-
-                            <Border Grid.Row="0">
-                                <Grid>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="2*" />
-                                        <ColumnDefinition Width=".5*" />
-                                        <ColumnDefinition Width="0.7*" />
-                                        <!--  <ColumnDefinition Width=".5*" />-->
-                                    </Grid.ColumnDefinitions>
-                                    <Border Grid.Column="0">
-                                        <Label Content="Amount"  RenderTransformOrigin="1.158,-0.076" />
-                                    </Border>
-                                    <Border Grid.Column="1">
-                                        <Label Content="Spendable:"  HorizontalAlignment="Right" RenderTransformOrigin="1.158,-0.076" FontWeight="DemiBold"/>
-                                    </Border>
-                                    <Border Grid.Column="2">
-                                        <Label  x:Name="textAvailableCoin" HorizontalAlignment="Left" 
+                                <Border Grid.Row="0">
+                                    <Grid>
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="2*" />
+                                            <ColumnDefinition Width=".5*" />
+                                            <ColumnDefinition Width="0.7*" />
+                                            <!--  <ColumnDefinition Width=".5*" />-->
+                                        </Grid.ColumnDefinitions>
+                                        <Border Grid.Column="0">
+                                            <Label Content="Amount"  RenderTransformOrigin="1.158,-0.076" />
+                                        </Border>
+                                        <Border Grid.Column="1">
+                                            <Label Content="Spendable:"  HorizontalAlignment="Right" RenderTransformOrigin="1.158,-0.076" FontWeight="DemiBold"/>
+                                        </Border>
+                                        <Border Grid.Column="2">
+                                            <Label  x:Name="textAvailableCoin" HorizontalAlignment="Left" 
                            RenderTransformOrigin="1.158,-0.076" FontWeight="DemiBold"/>
-                                    </Border>
-                                    <!--<Border Grid.Column="3">
+                                        </Border>
+                                        <!--<Border Grid.Column="3">
                                         <Label  Grid.Column="3" x:Name="textCoinType" 
                           />
                                     </Border>-->
-                                </Grid>
-                            </Border>
+                                    </Grid>
+                                </Border>
 
-                            <Border Grid.Row="1">
-                                <Grid>
-                                    <Grid.RowDefinitions>
-                                        <RowDefinition Height="*" />
-                                        <RowDefinition Height="*" />
-                                    </Grid.RowDefinitions>
+                                <Border Grid.Row="1">
+                                    <Grid>
+                                        <Grid.RowDefinitions>
+                                            <RowDefinition Height="*" />
+                                            <RowDefinition Height="*" />
+                                        </Grid.RowDefinitions>
 
-                                    <!--Amount-->
-                                    <TextBox Grid.Row="0" x:Name="SendAmountText" 
+                                        <!--Amount-->
+                                        <TextBox Grid.Row="0" x:Name="SendAmountText" 
                TextChanged="CheckSendAmount_OnChange"/>
-                                    <Label Grid.Row="1" x:Name="Amount_Error_Message_Label" Visibility="Hidden" Foreground="red" />
+                                        <Label Grid.Row="1" x:Name="Amount_Error_Message_Label" Visibility="Hidden" Foreground="red" />
 
-                                </Grid>                                
-                            </Border>
-                        </Grid>
-                    </Border>
+                                    </Grid>
+                                </Border>
+                            </Grid>
+                        </Border>
 
-                    <!--Address-->
-                    <Border Grid.Row="1" Margin="0 5 0 0">
-                        <Grid>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="*" />
-                                <RowDefinition Height="*"/>
-                            </Grid.RowDefinitions>
+                        <!--Address-->
+                        <Border Grid.Row="1" Margin="0 5 0 0">
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="*" />
+                                    <RowDefinition Height="*"/>
+                                </Grid.RowDefinitions>
 
-                            <Label Grid.Row="0" Content="Destination Address" RenderTransformOrigin="1.158,-0.076"/>
+                                <Label Grid.Row="0" Content="Destination Address" RenderTransformOrigin="1.158,-0.076"/>
 
-                            <TextBox Grid.Row="1" x:Name="DestinationAddressText" 
+                                <TextBox Grid.Row="1" x:Name="DestinationAddressText" 
                           TextChanged="CalculateTransactionFee_OnChange"
                         />
-                            <!--Focusable="True" FocusManager.LostFocus="TxtAddress_LostFocus"-->
+                                <!--Focusable="True" FocusManager.LostFocus="TxtAddress_LostFocus"-->
 
-                        </Grid>
-                    </Border>
+                            </Grid>
+                        </Border>
 
-                    <!-- transaction fee-->
-                    <Border Grid.Row="2" Margin=" 0 5 0 0">
-                        <Grid>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="*" />
-                                <RowDefinition Height="*"/>
-                                <RowDefinition Height="*"/>
-                                <RowDefinition Height="*"/>
-                            </Grid.RowDefinitions>
+                        <!-- transaction fee-->
+                        <Border Grid.Row="2" Margin=" 0 5 0 0">
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="*" />
+                                    <RowDefinition Height="*"/>
+                                    <RowDefinition Height="*"/>
+                                    <RowDefinition Height="*"/>
+                                </Grid.RowDefinitions>
 
-                            <Label Grid.Row="0" Content="Transaction fee"  RenderTransformOrigin="1.158,-0.076" />
-                            <TextBox Grid.Row="1"  x:Name="TransactionFeeText" BorderBrush="Green" IsReadOnly="True"  />
-                            <Label Grid.Row="2" x:Name="TransactionFeeTypeLabel"  RenderTransformOrigin="1.158,-0.076" />
-                            <TextBlock x:Name="TransactionWarningLabel" Grid.Row="3" Text="Please enter a valid amount and destination address to calculate the fee" TextWrapping="Wrap"  Foreground="Red" />
-                        </Grid>
-                    </Border>
+                                <Label Grid.Row="0" Content="Transaction fee"  RenderTransformOrigin="1.158,-0.076" />
+                                <TextBox Grid.Row="1"  x:Name="TransactionFeeText" BorderBrush="Green" IsReadOnly="True"  />
+                                <Label Grid.Row="2" x:Name="TransactionFeeTypeLabel"  RenderTransformOrigin="1.158,-0.076" />
+                                <TextBlock x:Name="TransactionWarningLabel" Grid.Row="3" Text="Please enter a valid amount and destination address to calculate the fee" TextWrapping="Wrap"  Foreground="Red" />
+                            </Grid>
+                        </Border>
 
-                    <!--password-->
+                        <!--password-->
 
-                    <Border Grid.Row="3" Margin="0 5 0 5">
-                        <Grid>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="*" />
-                                <RowDefinition Height="*"/>
-                            </Grid.RowDefinitions>
+                        <Border Grid.Row="3" Margin="0 5 0 5">
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="*" />
+                                    <RowDefinition Height="*"/>
+                                </Grid.RowDefinitions>
 
-                            <Label Grid.Row="0" Content="Wallet Password" />
-                            <PasswordBox Grid.Row="1" x:Name="password" PasswordChar="*"
+                                <Label Grid.Row="0" Content="Wallet Password" />
+                                <PasswordBox Grid.Row="1" x:Name="password" PasswordChar="*"
                              />
-                        </Grid>
-                    </Border>
+                            </Grid>
+                        </Border>
 
-                </Grid>
-            </Border>
+                    </Grid>
+                </Border>
 
-            <!-- submit , cancel button -->
-            <Border Grid.Row="2" Margin=" 0 5 0 0" >
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="*" />
-                    </Grid.ColumnDefinitions>
+                <!-- submit , cancel button -->
+                <Border Grid.Row="2" Margin=" 0 5 0 0" >
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
 
-                    <!--<Button Grid.Column="0" x:Name="CancelButton" Click="Cancel_CrossChainTransferButton_Click"  Content="Cancel" Padding="2" Margin="100,0,5,0"
+                        <!--<Button Grid.Column="0" x:Name="CancelButton" Click="Cancel_CrossChainTransferButton_Click"  Content="Cancel" Padding="2" Margin="100,0,5,0"
                     Background="Red" Height="35"
                       
                             Foreground="White">
@@ -154,7 +152,7 @@
                         </Button.Resources>
                     </Button>-->
 
-                    <Button Grid.Column="1" 
+                        <Button Grid.Column="1" 
                                 x:Name="SendButton" 
                                 Click="CrossChainTransferButton_Click" 
                                 Content="Send" 
@@ -162,17 +160,19 @@
                                 Margin="75,0,00,0"
                         Background="Green" Height="35"
                             Foreground="White">
-                        <Button.Resources>
-                            <Style TargetType="{x:Type Border}">
-                                <Setter Property="CornerRadius" Value="5"/>
-                            </Style>
-                        </Button.Resources>
-                    </Button>
+                            <Button.Resources>
+                                <Style TargetType="{x:Type Border}">
+                                    <Setter Property="CornerRadius" Value="5"/>
+                                </Style>
+                            </Button.Resources>
+                        </Button>
 
-                </Grid>
-            </Border>
+                    </Grid>
+                </Border>
 
-        </Grid>
+            </Grid>
 
-    </StackPanel>
+        </StackPanel>
+    </Grid>
+    
 </Page>
